--- a/templates/product-list.html
+++ b/templates/product-list.html
@@ -117,9 +117,14 @@ hr {
    </div>
  </section>
  
- <div class="container py-5">
+ <div class="container-fluid py-5">
     <div class="row">
         <div class="col-lg-8 mx-auto">
+            {% if searched_product %}
+            <div class="searched-text">
+                <h4>Showing results for the searched item "{{name}}"</h4>
+            </div>
+            {% endif %}
             <!-- List group-->
             <ul class="list-group shadow">
                 <!-- list group item-->
@@ -130,9 +135,9 @@ hr {
                     <div class="d-flex p-3">
                         <div class="media-body order-2 order-lg-1 product-info">
                             <h5 class="mt-0 font-weight-bold mb-2"><a href="{{url_for('info', id=items.id)}}">{{items.productDisplayName}}</a></h5>
-                            <p class="font-italic text-muted mb-0 small">128 GB ROM | 15.49 cm (6.1 inch) Display 12MP Rear Camera | 7MP Front Camera A12 Bionic Chip Processor</p>
+                            <p class="font-italic text-muted mb-0 small">{{items.masterCategory}} | {{items.subCategory}} | {{items.articleType}} | {{items.baseColour}} | {{items.usage}} | {{items.gender}}</p>
                             <div class="d-flex align-items-center justify-content-between mt-1">
-                                <h6 class="font-weight-bold my-2">₹64,999</h6>
+                                <h6 class="font-weight-bold my-2">${{items.amount}}</h6>
                             </div>
                         </div><img src="{{items.image}}" alt="Generic placeholder image" width="200" class="ml-lg-5">
                     </div> <!-- End -->
@@ -147,9 +152,9 @@ hr {
                     <div class="d-flex p-3">
                         <div class="media-body order-2 order-lg-1 product-info">
                             <h5 class="mt-0 font-weight-bold mb-2"><a href="{{url_for('info', id=items.id)}}">{{items.productDisplayName}}</a></h5>
-                            <p class="font-italic text-muted mb-0 small">128 GB ROM | 15.49 cm (6.1 inch) Display 12MP Rear Camera | 7MP Front Camera A12 Bionic Chip Processor</p>
+                            <p class="font-italic text-muted mb-0 small">{{items.articleType}} | {{items.subCategory}} | {{items.masterCategory}}</p>
                             <div class="d-flex align-items-center justify-content-between mt-1">
-                                <h6 class="font-weight-bold my-2">₹64,999</h6>
+                                <h6 class="font-weight-bold my-2">${{items.amount}}</h6>
                             </div>
                         </div><img src="{{items.image}}" alt="Generic placeholder image" width="200" class="ml-lg-5">
                     </div> <!-- End -->
