--- a/templates/single-product.html
+++ b/templates/single-product.html
@@ -102,7 +102,7 @@ hr {
   <div class="product_image_area section_padding">
    <div class="container">
      <div class="row s_product_inner justify-content-between">
-       <div class="col-lg-7 col-xl-7">
+       <div class="col-lg-6 col-xl-6">
          <div class="product_slider_img">
            <div id="vertical">
              <div data-thumb="{{information.image}}">
@@ -111,33 +111,37 @@ hr {
            </div>
          </div>
        </div>
-       <div class="col-lg-5 col-xl-4">
+       <div class="col-lg-6 col-xl-6">
          <div class="s_product_text">
-           <h5>previous <span>|</span> next</h5>
            <h3>{{information.productDisplayName}}</h3>
-           <h2>$149.99</h2>
+           <h2>${{information.amount}}</h2>
            <ul class="list">
              <li>
-               <a class="active" href="#">
-                 <span>Category</span> : Household</a>
+               <a class="#" href="#">
+                 <span>Main Category</span> : {{information.masterCategory}}</a>
              </li>
              <li>
                <a href="#"> <span>Availibility</span> : In Stock</a>
              </li>
+             <li>
+              <a href="#"> <span>Sub Category</span> : {{information.subCategory}}</a>
+            </li>
+            <li>
+              <a href="#"> <span>Type</span> : {{information.articleType}}</a>
+            </li>
+            <li>
+              <a href="#"> <span>Gender</span> : {{information.gender}}</a>
+            </li>
+            <li>
+              <a href="#"> <span>Color</span> : {{information.baseColour}}</a>
+            </li>
+            <li>
+              <a href="#"> <span>Season</span> : {{information.season}}</a>
+            </li>
+            <li>
+              <a href="#"> <span>Usage</span> : {{information.usage}}</a>
+            </li>
            </ul>
-           <p>
-             First replenish living. Creepeth image image. Creeping can't, won't called.
-             Two fruitful let days signs sea together all land fly subdue
-           </p>
-           <div class="card_area d-flex justify-content-between align-items-center">
-             <div class="product_count">
-               <span class="inumber-decrement"> <i class="ti-minus"></i></span>
-               <input class="input-number" type="text" value="1" min="0" max="10">
-               <span class="number-increment"> <i class="ti-plus"></i></span>
-             </div>
-             <a href="#" class="btn_3">add to cart</a>
-             <a href="#" class="like_us"> <i class="ti-heart"></i> </a>
-           </div>
          </div>
        </div>
      </div>
@@ -150,84 +154,12 @@ hr {
    <div class="container">
      <ul class="nav nav-tabs" id="myTab" role="tablist">
        <li class="nav-item">
-         <a class="nav-link" id="profile-tab" data-bs-toggle="tab" href="#profile" role="tab" aria-controls="profile"
-           aria-selected="false">Specification</a>
-       </li>
-       <li class="nav-item">
          <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#contact" role="tab" aria-controls="contact"
            aria-selected="false">Comments</a>
        </li>
-       <li class="nav-item">
-         <a class="nav-link active" id="review-tab" data-bs-toggle="tab" href="#review" role="tab" aria-controls="review"
-           aria-selected="false">Reviews</a>
-       </li>
      </ul>
      <div class="tab-content" id="myTabContent">
-       <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-         <div class="table-responsive">
-           <table class="table">
-             <tbody>
-               <tr>
-                 <td>
-                   <h5>Main Category</h5>
-                 </td>
-                 <td>
-                   <h5>{{information.masterCategory}}</h5>
-                 </td>
-               </tr>
-               <tr>
-                 <td>
-                   <h5>Sub Category</h5>
-                 </td>
-                 <td>
-                   <h5>{{information.subCategory}}</h5>
-                 </td>
-               </tr>
-               <tr>
-                 <td>
-                   <h5>Type</h5>
-                 </td>
-                 <td>
-                   <h5>{{information.articleType}}</h5>
-                 </td>
-               </tr>
-               <tr>
-                 <td>
-                   <h5>Gender</h5>
-                 </td>
-                 <td>
-                   <h5>{{information.gender}}</h5>
-                 </td>
-               </tr>
-               <tr>
-                 <td>
-                   <h5>Color</h5>
-                 </td>
-                 <td>
-                   <h5>{{information.baseColour}}</h5>
-                 </td>
-               </tr>
-               <tr>
-                 <td>
-                   <h5>Season</h5>
-                 </td>
-                 <td>
-                   <h5>{{information.season}}</h5>
-                 </td>
-               </tr>
-               <tr>
-                 <td>
-                   <h5>Usage</h5>
-                 </td>
-                 <td>
-                   <h5>{{information.usage}}</h5>
-                 </td>
-               </tr>
-             </tbody>
-           </table>
-         </div>
-       </div>
-       <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+       <div class="tab-pane fade show active" id="contact" role="tabpanel" aria-labelledby="contact-tab">
          <div class="row">
            <div class="col-lg-6"> 
              <div class="comment_list">
@@ -268,189 +200,6 @@ hr {
                    <div class="form-group">
                      <textarea class="form-control" name="message" id="message" rows="1"
                        placeholder="Message"></textarea>
-                   </div>
-                 </div>
-                 <div class="col-md-12 text-right">
-                   <button type="submit" value="submit" class="btn_3">
-                     Submit Now
-                   </button>
-                 </div>
-               </form>
-             </div>
-           </div>
-         </div>
-       </div>
-       <div class="tab-pane fade show active" id="review" role="tabpanel" aria-labelledby="review-tab">
-         <div class="row">
-           <div class="col-lg-6">
-             <div class="row total_rate">
-               <div class="col-6">
-                 <div class="box_total">
-                   <h5>Overall</h5>
-                   <h4>4.0</h4>
-                   <h6>(03 Reviews)</h6>
-                 </div>
-               </div>
-               <div class="col-6">
-                 <div class="rating_list">
-                   <h3>Based on 3 Reviews</h3>
-                   <ul class="list">
-                     <li>
-                       <a href="#">5 Star
-                         <i class="fa fa-star"></i>
-                         <i class="fa fa-star"></i>
-                         <i class="fa fa-star"></i>
-                         <i class="fa fa-star"></i>
-                         <i class="fa fa-star"></i> 01</a>
-                     </li>
-                     <li>
-                       <a href="#">4 Star
-                         <i class="fa fa-star"></i>
-                         <i class="fa fa-star"></i>
-                         <i class="fa fa-star"></i>
-                         <i class="fa fa-star"></i>
-                         <i class="fa fa-star"></i> 01</a>
-                     </li>
-                     <li>
-                       <a href="#">3 Star
-                         <i class="fa fa-star"></i>
-                         <i class="fa fa-star"></i>
-                         <i class="fa fa-star"></i>
-                         <i class="fa fa-star"></i>
-                         <i class="fa fa-star"></i> 01</a>
-                     </li>
-                     <li>
-                       <a href="#">2 Star
-                         <i class="fa fa-star"></i>
-                         <i class="fa fa-star"></i>
-                         <i class="fa fa-star"></i>
-                         <i class="fa fa-star"></i>
-                         <i class="fa fa-star"></i> 01</a>
-                     </li>
-                     <li>
-                       <a href="#">1 Star
-                         <i class="fa fa-star"></i>
-                         <i class="fa fa-star"></i>
-                         <i class="fa fa-star"></i>
-                         <i class="fa fa-star"></i>
-                         <i class="fa fa-star"></i> 01</a>
-                     </li>
-                   </ul>
-                 </div>
-               </div>
-             </div>
-             <div class="review_list">
-               <div class="review_item">
-                 <div class="media">
-                   <div class="d-flex">
-                     <img src="img/product/single-product/review-1.png" alt="" />
-                   </div>
-                   <div class="media-body">
-                     <h4>Blake Ruiz</h4>
-                     <i class="fa fa-star"></i>
-                     <i class="fa fa-star"></i>
-                     <i class="fa fa-star"></i>
-                     <i class="fa fa-star"></i>
-                     <i class="fa fa-star"></i>
-                   </div>
-                 </div>
-                 <p>
-                   Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                   sed do eiusmod tempor incididunt ut labore et dolore magna
-                   aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                   ullamco laboris nisi ut aliquip ex ea commodo
-                 </p>
-               </div>
-               <div class="review_item">
-                 <div class="media">
-                   <div class="d-flex">
-                     <img src="img/product/single-product/review-2.png" alt="" />
-                   </div>
-                   <div class="media-body">
-                     <h4>Blake Ruiz</h4>
-                     <i class="fa fa-star"></i>
-                     <i class="fa fa-star"></i>
-                     <i class="fa fa-star"></i>
-                     <i class="fa fa-star"></i>
-                     <i class="fa fa-star"></i>
-                   </div>
-                 </div>
-                 <p>
-                   Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                   sed do eiusmod tempor incididunt ut labore et dolore magna
-                   aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                   ullamco laboris nisi ut aliquip ex ea commodo
-                 </p>
-               </div>
-               <div class="review_item">
-                 <div class="media">
-                   <div class="d-flex">
-                     <img src="img/product/single-product/review-3.png" alt="" />
-                   </div>
-                   <div class="media-body">
-                     <h4>Blake Ruiz</h4>
-                     <i class="fa fa-star"></i>
-                     <i class="fa fa-star"></i>
-                     <i class="fa fa-star"></i>
-                     <i class="fa fa-star"></i>
-                     <i class="fa fa-star"></i>
-                   </div>
-                 </div>
-                 <p>
-                   Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                   sed do eiusmod tempor incididunt ut labore et dolore magna
-                   aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                   ullamco laboris nisi ut aliquip ex ea commodo
-                 </p>
-               </div>
-             </div>
-           </div>
-           <div class="col-lg-6">
-             <div class="review_box">
-               <h4>Add a Review</h4>
-               <p>Your Rating:</p>
-               <ul class="list">
-                 <li>
-                   <a href="#">
-                     <i class="fa fa-star"></i>
-                   </a>
-                 </li>
-                 <li>
-                   <a href="#">
-                     <i class="fa fa-star"></i>
-                   </a>
-                 </li>
-                 <li>
-                   <a href="#">
-                     <i class="fa fa-star"></i>
-                   </a>
-                 </li>
-                 <li>
-                   <a href="#">
-                     <i class="fa fa-star"></i>
-                   </a>
-                 </li>
-                 <li>
-                   <a href="#">
-                     <i class="fa fa-star"></i>
-                   </a>
-                 </li>
-               </ul>
-               <p>Outstanding</p>
-               <form class="row contact_form" action="#" method="post" novalidate="novalidate">
-                 <div class="col-md-12">
-                   <div class="form-group">
-                     <input type="text" class="form-control" name="name" placeholder="Your Full name" />
-                   </div>
-                 </div>
-                 <div class="col-md-12">
-                   <div class="form-group">
-                     <input type="email" class="form-control" name="email" placeholder="Email Address" />
-                   </div>
-                 </div>
-                 <div class="col-md-12">
-                   <div class="form-group">
-                     <textarea class="form-control" name="message" rows="1" placeholder="Review"></textarea>
                    </div>
                  </div>
                  <div class="col-md-12 text-right">
