--- a/templates/single-product.html
+++ b/templates/single-product.html
@@ -90,7 +90,7 @@ hr {
 <section class="py-5 text-center container-fluid blog-banner" id="about">
    <div class="row py-lg-5">
      <div class="col-lg-6 col-md-8 mx-auto">
-       <h1 class="fw-light">Welcome <span id="user">{{name}},</span></h1>
+       <h1 class="fw-light">Product Details</h1>
        <p class="lead text-muted"></p>
        <p>
        </p>
