--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -7,15 +7,15 @@
           <div class="col-lg-3">
              <aside class="f-about">
                 <div class="footer-title">
-                   <h3><a href="#">Information</a></h3>
+                   <h3><a href="#">Fashiona</a></h3>
                 </div>
-                <p>If you want to work with me or want any additional information, feel free to contact me.</p>
+                <p class="address">If you have any queries regarding the products, feel free to contact us.</p>
              </aside>
           </div>
           <div class="col-lg-6">
              <aside class="footer-social text-center">
                 <div class="footer-title">
-                   <h3>Find me on</h3>
+                   <h3>Find us on</h3>
                 </div>
                 <ul class="social-icons">
                    <li><a href="https://www.facebook.com/ellefson.sachin/" target="_blank"><i class="fab fa-facebook"></i></a></li>
@@ -32,7 +32,7 @@
                    <h3>Contact Information</h3>
                 </div>
                 <div class="contact-info">
-                   <h3 class="contact-name">Sachin Pokharel</h3>
+                   <h3 class="contact-name">Fashiona</h3>
                    <p class="address">Grodingevagen 15, Tumba<br>Stockholm, Sweden<br>
                       Tel: +46-73-243-7154
                    </p>
