--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -7,7 +7,7 @@
           <div class="col-lg-3">
              <aside class="f-about">
                 <div class="footer-title">
-                   <h3><a href="#">Fashiona</a></h3>
+                   <h3><a href="{{ url_for('index') }}">Fashlance</a></h3>
                 </div>
                 <p class="address">If you have any queries regarding the products, feel free to contact us.</p>
              </aside>
@@ -32,7 +32,7 @@
                    <h3>Contact Information</h3>
                 </div>
                 <div class="contact-info">
-                   <h3 class="contact-name">Fashiona</h3>
+                   <h3 class="contact-name">Fashlance</h3>
                    <p class="address">Grodingevagen 15, Tumba<br>Stockholm, Sweden<br>
                       Tel: +46-73-243-7154
                    </p>
