--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}
-Welcome - Fashiona, A Product Recommendation
+Welcome - Fashlance, A Product Recommender
 {% endblock %}
 
 {% block content %}
@@ -10,7 +10,7 @@ Welcome - Fashiona, A Product Recommendation
 <header class="header-content">
   <nav class="navbar navbar-expand-lg navbar-light">
      <div class="container">
-      <a class="navbar-brand logo" href="#">Fashiona</a>
+      <a class="navbar-brand logo" href="#">Fashlance</a>
        <!-- <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo" width="25" height="24" class="nav-logo"> -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-expanded="false" aria-controls="navbarCollapse" aria-label="Toggle Navigation">
         <span class="navbar-toggler-icon"></span>
@@ -22,9 +22,6 @@ Welcome - Fashiona, A Product Recommendation
               </li>
               <li class="nav-item">
                  <a href="{{ url_for('dashboard') }}" class="nav-link">Products</a>
-              </li>
-              <li class="nav-item">
-                 <a href="{{ url_for('signup') }}" class="nav-link">Login</a>
               </li>
               <li class="nav-item">
                <a href="{{ url_for('signup') }}" class="nav-link">Contact</a>
@@ -46,8 +43,8 @@ Welcome - Fashiona, A Product Recommendation
           <h1>Welcome to</h1>
           <h1 class="cd-headline clip">
           <span class="cd-words-wrapper">
-              <b class="is-visible">Fashiona.</b>
-              <b>Product Recommendation</b>
+              <b class="is-visible">Fashlance.</b>
+              <b>Product Recommender</b>
           </span>
       </h1>
           <p>
