--- a/templates/product-list.html
+++ b/templates/product-list.html
@@ -94,10 +94,10 @@ hr {
                  <a href="{{ url_for('index') }}" class="nav-link">Home</a>
               </li>
               <li class="nav-item">
-                 <a href="{{ url_for('dashboard') }}" class="nav-link active">Back to Products</a>
+                 <a href="{{ url_for('dashboard') }}" class="nav-link active">Products</a>
               </li>
               <li class="nav-item">
-                 <a href="{{ url_for('logout') }}" class="nav-link">Contact</a>
+                 <a href="{{ url_for('technologies') }}" class="nav-link">Tools</a>
               </li>
            </ul>
         </div>
