--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@ Welcome - Fashlance, A Product Recommender
                  <a href="{{ url_for('dashboard') }}" class="nav-link">Products</a>
               </li>
               <li class="nav-item">
-               <a href="{{ url_for('signup') }}" class="nav-link">Contact</a>
+               <a href="{{ url_for('technologies') }}" class="nav-link">Tools</a>
             </li>
            </ul>
         </div>
