--- a/templates/single-product.html
+++ b/templates/single-product.html
@@ -79,7 +79,7 @@ hr {
                  <a href="{{ url_for('dashboard') }}" class="nav-link active">Products</a>
               </li>
               <li class="nav-item">
-                 <a href="{{ url_for('logout') }}" class="nav-link">Contact</a>
+                 <a href="{{ url_for('technologies') }}" class="nav-link">Tools</a>
               </li>
            </ul>
         </div>
