--- a/fashlance/templates/index.html
+++ b/fashlance/templates/index.html
@@ -7,7 +7,7 @@ Welcome - Fashlance, A Product Recommender
 {% block content %}
 
 <header class="header-content">
-  <nav class="navbar navbar-expand-lg navbar-light">
+  <nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm navbar-light">
      <div class="container">
       <a class="navbar-brand logo" href="#">Fashlance</a>
        <!-- <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo" width="25" height="24" class="nav-logo"> -->
@@ -35,7 +35,7 @@ Welcome - Fashlance, A Product Recommender
 <section id="home-content" style="background: url(../static/img/hero-1.jpg); background-size: cover; background-position: 25% 75%;" data-scroll-index="0">
   <div class="container">
       <div class="row">
-          <div class="col-lg-7 offset-lg-1">
+          <div class="col-lg-7 offset-lg-1 col-md-7">
       <div class="home-text">
           <div class="home-text-inner">
           <h3>Hello</h3>
