--- a/fashlance/templates/technologies.html
+++ b/fashlance/templates/technologies.html
@@ -134,67 +134,67 @@ hr {
 			<h2 class="fw-light">Technologies used</h2>
 		</div>
         <div class="row technologies">
-            <div class="col-lg-2 text-center">
+            <div class="col-lg-2 col-4 text-center">
                 <div class="tech-img">
                     <img src="{{ url_for('static', filename='img/tech/python.png') }}" alt="Python">
                 </div>
                 <h6>Python</h6>
             </div>
-            <div class="col-lg-2 text-center">
+            <div class="col-lg-2 col-4 text-center">
                 <div class="tech-img">
                     <img src="{{ url_for('static', filename='img/tech/jupyter.png') }}" alt="Jupyter">
                 </div>
                 <h6>Jupyter</h6>
             </div>
-            <div class="col-lg-2 text-center">
+            <div class="col-lg-2 col-4 text-center">
                 <div class="tech-img">
                     <img src="{{ url_for('static', filename='img/tech/sklearn.png') }}" alt="Scikit-Learn">
                 </div>
                 <h6>Scikit-Learn</h6>
             </div>
-            <div class="col-lg-2 text-center">
+            <div class="col-lg-2 col-4 text-center">
                 <div class="tech-img">
                     <img src="{{ url_for('static', filename='img/tech/tensorflow.png') }}" alt="Tensorflow">
                 </div>
                 <h6>Tensorflow</h6>
             </div>
-            <div class="col-lg-2 text-center">
+            <div class="col-lg-2 col-4 text-center">
                 <div class="tech-img">
                     <img src="{{ url_for('static', filename='img/tech/NLP.png') }}" alt="">
                 </div>
                 <h6>NLP</h6>
             </div>
-            <div class="col-lg-2 text-center">
+            <div class="col-lg-2 col-4 text-center">
                 <div class="tech-img">
                     <img src="{{ url_for('static', filename='img/tech/flask.png') }}" alt="Flask">
                 </div>
                 <h6>Flask</h6>
             </div>
-            <div class="col-lg-2 text-center">
+            <div class="col-lg-2 col-4 text-center">
                 <div class="tech-img">
                     <img src="{{ url_for('static', filename='img/tech/html-css.png') }}" alt="HTML/CSS">
                 </div>
                 <h6>HTML5/CSS</h6>
             </div>
-            <div class="col-lg-2 text-center">
+            <div class="col-lg-2 col-4 text-center">
                 <div class="tech-img">
                     <img src="{{ url_for('static', filename='img/tech/jquery.jpg') }}" alt="JQuery">
                 </div>
                 <h6>JQuery</h6>
             </div>
-            <div class="col-lg-2 text-center">
+            <div class="col-lg-2 col-4 text-center">
                 <div class="tech-img">
                     <img src="{{ url_for('static', filename='img/tech/sql.png') }}" alt="SQLAlchemy">
                 </div>
                 <h6>SQLAlchemy</h6>
             </div>
-            <div class="col-lg-2 text-center">
+            <div class="col-lg-2 col-4 text-center">
                 <div class="tech-img">
                     <img src="{{ url_for('static', filename='img/tech/heroku.png') }}" alt="Heroku">
                 </div>
                 <h6>Heroku</h6>
             </div>
-            <div class="col-lg-2 text-center">
+            <div class="col-lg-2 col-4 text-center">
                 <div class="tech-img">
                     <img src="{{ url_for('static', filename='img/tech/github.png') }}" alt="GitHub">
                 </div>
