--- a/fashlance/templates/dashboard.html
+++ b/fashlance/templates/dashboard.html
@@ -121,7 +121,7 @@ hr {
                 <div class="form-group">
                <input type="text" class="form-control" name="keyword" placeholder="Search your Products" />
             </div>
-            <i class="fa fa-camera img-search fa-2x"></i>
+            <i class="fa fa-camera img-search fa-2x" title="Search By Image" data-toggle="tooltip"></i>
             <input type="file" value="" name="fileup" id="fileup">
             <button type="submit" name="submit" class="submit-btn btn btn-outline-secondary">Search</button>
             </div>
